Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.0
-
None
Description
when exec an insert query, even the query insert 0 row to the table, a new data file will be generated on HDFS, 0 byte. this could cause lots of 0 byte file on HDFS.
It doesn't matter if the table has partition or not.
If the query doesn't have any data to insert, it shouldn't generate a new file.